--- a/index.html
+++ b/index.html
@@ -14,17 +14,29 @@
 <body>
 
 <header>
-    <div id="logo">
-        <h1><a href="index.html">Zealand</a></h1>
+    <div class="container">
+        <div id="menu">
+            <div id="logo">
+                <h1><a href="index.html">Zealand</a></h1>
+            </div>
+            <nav>
+                <ul>
+                    <li><a href="index.html">Forside</a></li>
+                    <li><a href="info.html">Info</a></li>
+                    <li><a href="kontakt.html">Kontakt</a></li>
+                </ul>
+            </nav>
+        </div>
     </div>
-    <nav>
-        <ul>
-            <li><a href="index.html">Forside</a></li>
-            <li><a href="info.html">Info</a></li>
-            <li><a href="kontakt.html">Kontakt</a></li>
-        </ul>
-    </nav>
 </header>
+
+<main id="forside-main">
+    <div id="hero" class="overlay">
+        <h2>Multimediedesigner</h2>
+        <p>Uddannelsen til multimediedesigner er for dig, der ønsker at arbejde kreativt med digital kommunikation, medier, visuel design, interaktivt design og webudvikling.</p>
+        <a href="info.html" id="info-button">Læs Mere</a>
+    </div>
+</main>
 
 </body>
 </html>
