Styled contact formula

--- a/kontakt.html
+++ b/kontakt.html
@@ -30,7 +30,7 @@
     </div>
 </header>
 
-<main id="kontakt-main">
+<main id="kontakt-main" class="container">
     <form>
         <label for="name">Navn</label>
         <input type="text" id="name" name="name" placeholder="Indtast navn">
