Added parallax image to contact page

--- a/kontakt.html
+++ b/kontakt.html
@@ -30,6 +30,12 @@
     </div>
 </header>
 
+<div class="parallax-2">
+    <div class="parallax-overlay">
+        <h2>Kontakt</h2>
+    </div>
+</div>
+
 <main id="kontakt-main" class="container">
     <form>
         <label for="name">Navn</label>
