Added spacing on contact page and made submit button larger

--- a/kontakt.html
+++ b/kontakt.html
@@ -37,6 +37,7 @@
 </div>
 
 <main id="kontakt-main" class="container">
+    <h1>Skriv til os</h1>
     <form>
         <label for="name">Navn</label>
         <input type="text" id="name" name="name" placeholder="Indtast navn">
