--- a/kontakt.html
+++ b/kontakt.html
@@ -20,6 +20,11 @@
                 <h1><a href="index.html">Zealand</a></h1>
             </div>
             <nav>
+                <div id="hamburger">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </div>
                 <ul>
                     <li><a href="index.html">Forside</a></li>
                     <li><a href="info.html">Info</a></li>
