Toggle function added to mobile menu

--- a/kontakt.html
+++ b/kontakt.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html lang="en">
+<html lang="da">
 
 <head>
 
@@ -25,7 +25,7 @@
                     <span></span>
                     <span></span>
                 </div>
-                <ul>
+                <ul class="mainMenu">
                     <li><a href="index.html">Forside</a></li>
                     <li><a href="info.html">Info</a></li>
                     <li><a href="kontakt.html">Kontakt</a></li>
@@ -57,4 +57,6 @@
     </form>
 </main>
 
+<script src="js/main.js"></script>
 </body>
+</html>
