Added alert box on contact page when clicking submit

--- a/kontakt.html
+++ b/kontakt.html
@@ -53,7 +53,7 @@
         <label for="besked">Besked</label>
         <textarea id="besked" name="besked" placeholder="Skriv besked" style="height:200px"></textarea>
 
-        <input type="submit" value="Send">
+        <input type="submit" value="Send" id="submitMsg">
     </form>
 </main>
 
