Created a function to add an li for the login page

--- a/login.html
+++ b/login.html
@@ -41,7 +41,7 @@
         <label for="username">Brugernavn</label>
         <input type="text" id="username" name="username" placeholder="Indtast brugernavn">
         <label for="password">Adgangskode</label>
-        <input type="password" id="password">
+        <input type="password" id="password" placeholder="Indtast adgangskode">
         <button type="button" id="loginBtn">Login</button>
     </form>
 </main>
