Login form implemented

--- a/login.html
+++ b/login.html
@@ -41,6 +41,7 @@
 <main id="loginMain" class="container">
     <h1>Login</h1>
     <form class="formContainer" id="loginForm">
+        <span class="loginMsg"></span>
         <label for="username">Brugernavn<span class="red">*</span></label>
         <input type="text" id="username" name="username" placeholder="Indtast brugernavn">
         <label for="password">Adgangskode<span class="red">*</span></label>
